# issue-flow

./: .gitignore  HISTORY.md  LICENSE  README.md  pyproject.toml
.cursor/commands/: iflow.md  issue-close.md  issue-init.md  issue-plan.md  issue-start.md  issue-yolo.md
.cursor/rules/: issueflow-rules.mdc
.cursor/skills/issueflow-issue-close/: SKILL.md
.cursor/skills/issueflow-issue-init/: SKILL.md
.cursor/skills/issueflow-issue-start/: SKILL.md
.github/workflows/: ci.yml  publish.yml
.issueflows/01-current-issues/: issue14_status.md  issue39_original.md
.issueflows/03-solved-issues/: issue10_original.md  issue10_status.md  issue13_original.md  issue13_status.md  issue14_original.md  issue15_original.md  issue15_plan.md  issue15_status.md  issue16_original.md  issue16_status.md  issue18_original.md  issue18_plan.md  issue18_status.md  issue1_original.md  issue1_status.md  issue25_original.md  issue25_status.md  issue26_original.md  issue26_status.md  issue2_original.md  issue2_status.md  issue31_original.md  issue31_status.md  issue39_status.md  issue45_original.md  issue45_plan.md  issue45_status.md  issue4_original.md  issue4_status.md  issue7_original.md  issue7_status.md
docs/: cursor-issue-workflow.md  developing.md
scripts/: update_issueflow_setup.py
src/issue_flow/: __init__.py  cli.py  config.py  dependencies.py  init.py  templating.py
src/issue_flow/templates/commands/: iflow.md.j2  issue-cleanup.md.j2  issue-close.md.j2  issue-init.md.j2  issue-pause.md.j2  issue-plan.md.j2  issue-start.md.j2  issue-yolo.md.j2
src/issue_flow/templates/docs/: cursor-issue-workflow.md.j2
src/issue_flow/templates/rules/: issueflow-rules.mdc.j2
src/issue_flow/templates/skills/issueflow_history_update/: SKILL.md.j2
src/issue_flow/templates/skills/issueflow_iflow/: SKILL.md.j2
src/issue_flow/templates/skills/issueflow_issue_cleanup/: SKILL.md.j2
tests/: conftest.py  test_config.py  test_dependencies.py  test_init.py  test_templating.py  test_update.py
(+7 files in other folders)
