[project]
name = "issue-flow"
version = "0.1.3"
description = "Agents should behave. Let them follow the issue flow."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "jepegit", email = "jepe@ife.no" }
]
requires-python = ">=3.13"
keywords = ["cursor", "ai", "agents", "issue-tracking", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.urls]
Homepage = "https://github.com/jepegit/issue-flow"
Repository = "https://github.com/jepegit/issue-flow"
Issues = "https://github.com/jepegit/issue-flow/issues"

[project.scripts]
issue-flow = "issue_flow.cli:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]
